[package]
name = "mrn-canvas"
version = "0.1.0"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
edition ="2018"

[dependencies]
relm = "^0.11.0"
relm-derive = "^0.11.0"
cairo-rs = "^0.3.0"
gdk = "^0.7.0"

[dependencies.gtk]
version = "^0.3.0"
features = ["v3_22"]

[lib]
name = "mrn_canvas"
path = "src/lib.rs"

[[example]]
name = "test"
path = "src/examples/test.rs"
