[package]
name = "mrn-canvas"
version = "0.1.0"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
edition ="2018"

[dependencies]
relm4 = { git = "https://github.com/Relm4/Relm4", tag = "v0.5.0-beta.1", features = ["macros"]}


[lib]
name = "mrn_canvas"
path = "src/lib.rs"

[[example]]
name = "test"
path = "src/examples/test.rs"
